First commited as before_103220_rev1